# learning

./: .gitignore  CMakeLists.txt  main.cpp
depends/GLFW/: CMakeLists.txt
depends/glad/: glad.c  glad.h
